Ajout des polices, bouton de changement de thème

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- ADDING FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2|Poppins&display=swap" rel="stylesheet">
     <!-- ADDING FONT AWESOME -->
     <script src="https://kit.fontawesome.com/b54ab1dc57.js" crossorigin="anonymous"></script>
     <!-- ADDING STYLES -->
@@ -15,6 +16,7 @@
 
 <body>
     <h1 style="display:none;">Vibes</h1>
+    <div id="theme-switch"><i class="fas fa-tint"></i></div>
     <div id="wrapper">
         <!-- MAIN NAVIGATION -->
         <header class="short-padding flex">
@@ -215,7 +217,8 @@
             </section>
         </footer>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="js/theme.js"></script>
     <script src="js/accordion.js"></script>
 </body>
 
