--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 
 <body>
     <h1 style="display:none;">Vibes</h1>
-    <div id="theme-switch"><i class="fas fa-tint"></i></div>
+    <div id="theme-switch"><i class="fas fa-tint pink pink-bdr"></i></div>
     <div id="wrapper">
         <!-- MAIN NAVIGATION -->
         <header class="short-padding flex">
             <a href="#" id="logo"><img src="img/vibes-logo.png" alt="Logo Vibes"></a>
             <nav id="main-nav" class="flex">
-                <a href="#">home</a>
-                <a href="#">about</a>
-                <a href="#">gallery</a>
-                <a href="#">testimonials</a>
-                <a href="#">contact</a>
-                <a href="#">pages</a>
+                <a href="index.html">home</a>
+                <a href="#about">about</a>
+                <a href="#gallery">gallery</a>
+                <a href="#testimonials">testimonials</a>
+                <a href="#contact">contact</a>
+                <a href="#footer-links">pages</a>
             </nav>
         </header>
         <!-- BANNER -->
         <section id="banner" class="huge-padding">
             <h1>html template for creative folks and design agencies</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim voluptate sed et voluptates nemo saepe accusamus quas!</p>
-            <p><a href="" class="button">read more</a></p>
+            <p><a href="" class="button pink-bdr">read more</a></p>
         </section>
         <!-- MAIN CONTENT STARTS -->
         <main>
@@ -47,21 +47,21 @@
                 </article>
                 <article>
                     <h2>What you get ?</h2>
-                    <p class="uppercase"><i class="fab fa-wordpress"></i>colorful & compact</p>
-                    <p class="uppercase"><i class="fas fa-cog"></i>fast & low cost</p>
-                    <p class="uppercase"><i class="fas fa-paper-plane"></i>beavis & butthead</p>
+                    <p class="uppercase"><i class="fab fa-wordpress pink"></i>colorful & compact</p>
+                    <p class="uppercase"><i class="fas fa-cog pink"></i>fast & low cost</p>
+                    <p class="uppercase"><i class="fas fa-paper-plane pink"></i>beavis & butthead</p>
                 </article>
                 <article class="accordion">
                     <div class="accordion-item accordion-ui-title">
-                        <h3 class="accordion-title accordion-ui-trigger"><i class="fas fa-plus"></i>titre</h3>
+                        <h3><i class="fas fa-plus accordion-title accordion-ui-trigger pink"></i>titre</h3>
                         <p class="accordion-content accordion-ui-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, dolorem?</p>
                     </div>
                     <div class="accordion-item accordion-ui-title">
-                        <h3 class="accordion-title accordion-ui-trigger"><i class="fas fa-plus"></i>titre</h3>
+                        <h3><i class="fas fa-plus accordion-title accordion-ui-trigger pink"></i>titre</h3>
                         <p class="accordion-content accordion-ui-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, expedita!</p>
                     </div>
                     <div class="accordion-item accordion-ui-title">
-                        <h3 class="accordion-title accordion-ui-trigger"><i class="fas fa-plus"></i>titre</h3>
+                        <h3><i class="fas fa-plus accordion-title accordion-ui-trigger pink"></i>titre</h3>
                         <p class="accordion-content accordion-ui-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, facere.</p>
                     </div>
                 </article>
@@ -70,36 +70,44 @@
             <section id="gallery">
                 <div id="gallery-img" class="flex">
                     <figure>
-                        <img src="img/jaquette1.jpg" alt="Jaquette 1">
-                        <div class="hidden"><i class="fas fa-music"></i></div>
+                        <img src="img/jaquette1.jpg" alt="Jaquette 1" class="lightbox">
+                        <div class="hidden pink-bgca"><i class="fas fa-music pink"></i></div>
+                        <div class="lightbox-open"></div>
                     </figure>
                     <figure>
-                        <img src="img/jaquette2.jpg" alt="Jaquette 2">
-                        <div class="hidden"><i class="far fa-play-circle"></i></div>
+                        <img src="img/jaquette2.jpg" alt="Jaquette 2" class="lightbox">
+                        <div class="hidden pink-bgca"><i class="far fa-play-circle pink"></i></div>
+                        <div class="lightbox-open"></div>
                     </figure>
                     <figure>
-                        <img src="img/jaquette3.jpg" alt="Jaquette 3">
-                        <div class="hidden"><i class="far fa-image"></i></div>
+                        <img src="img/jaquette3.jpg" alt="Jaquette 3" class="lightbox">
+                        <div class="hidden pink-bgca"><i class="far fa-image pink"></i></div>
+                        <div class="lightbox-open"></div>
                     </figure>
                     <figure>
-                        <img src="img/jaquette4.jpg" alt="Jaquette 4">
-                        <div class="hidden"><i class="fas fa-music"></i></div>
+                        <img src="img/jaquette4.jpg" alt="Jaquette 4" class="lightbox">
+                        <div class="hidden pink-bgca"><i class="fas fa-music pink"></i></div>
+                        <div class="lightbox-open"></div>
                     </figure>
                     <figure>
-                        <img src="img/jaquette5.jpg" alt="Jaquette 5">
-                        <div class="hidden"><i class="far fa-play-circle"></i></div>
+                        <img src="img/jaquette5.jpg" alt="Jaquette 5" class="lightbox">
+                        <div class="hidden pink-bgca"><i class="far fa-play-circle pink"></i></div>
+                        <div class="lightbox-open"></div>
                     </figure>
                     <figure>
-                        <img src="img/jaquette6.jpg" alt="Jaquette 6">
-                        <div class="hidden"><i class="far fa-image"></i></div>
+                        <img src="img/jaquette6.jpg" alt="Jaquette 6" class="lightbox">
+                        <div class="hidden pink-bgca"><i class="far fa-image pink"></i></div>
+                        <div class="lightbox-open"></div>
                     </figure>
                     <figure>
-                        <img src="img/jaquette7.jpg" alt="Jaquette 7">
-                        <div class="hidden"><i class="fas fa-music"></i></div>
+                        <img src="img/jaquette7.jpg" alt="Jaquette 7" class="lightbox">
+                        <div class="hidden pink-bgca"><i class="fas fa-music pink"></i></div>
+                        <div class="lightbox-open"></div>
                     </figure>
                     <figure>
-                        <img src="img/jaquette8.jpg" alt="Jaquette 8">
-                        <div class="hidden"><i class="far fa-play-circle"></i></div>
+                        <img src="img/jaquette8.jpg" alt="Jaquette 8" class="lightbox">
+                        <div class="hidden pink-bgca"><i class="far fa-play-circle pink"></i></div>
+                        <div class="lightbox-open"></div>
                     </figure>
                 </div>
                 <!-- GALLERY NAV -->
@@ -110,13 +118,13 @@
                         <a href="#">audio</a>
                         <a href="#">video</a>
                     </nav>
-                    <a href="" class="button pink-button">load more</a>
+                    <a class="button pink pink-bdr">load more</a>
                 </div>
             </section>
             <!-- TESTIMONIALS SECTION -->
             <section id="testimonials" class="short-padding">
                 <h1>testimonials</h1>
-                <div class="separator"></div>
+                <div class="separator pink-bgc"></div>
                 <div class="comment flex">
                     <i class="fas fa-user-tie"></i>
                     <div>
@@ -142,19 +150,19 @@
                         <p class="quote-details"><strong>Jean Marc Goulougoulou</strong>, l'homme au nom complètement éclaté.</p>
                     </div>
                 </div>
-                <p class="testimonial-button"><a href="#" class="button">become our pigeon</a></p>
+                <p class="testimonial-button"><a href="#" class="button pink pink-bdr">become our pigeon</a></p>
             </section>
             <!-- PURCHASE THEME SECTION -->
             <section id="purchase" class="huge-padding">
                 <h1>new horizons await</h1>
-                <div class="separator"></div>
+                <div class="separator pink-bgc"></div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur tempore quae et quos obcaecati deleniti! Corporis natus sed quas reiciendis?</p>
-                <a href="" class="button">buy vibes on themeforest</a>
+                <a href="" class="button pink-bdr">buy vibes on themeforest</a>
             </section>
             <!-- CONTACT SECTION -->
             <section id="contact" class="short-padding">
                 <h1>contact</h1>
-                <div class="separator"></div>
+                <div class="separator pink-bgc"></div>
                 <form action="form-post.php" method="post" class="flex">
                     <div>
                         <label for="" class="important">your name</label>
@@ -169,7 +177,7 @@
                         <input type="text">
                         <label for="" class="important">your message</label>
                         <textarea name="" id="" cols="30" rows="10"></textarea>
-                        <button type="submit" class="pink-button button">SEND</button>
+                        <button type="submit" class="pink-bgc button">SEND</button>
                     </div>
                 </form>
             </section>
@@ -180,24 +188,24 @@
             <section id="footer-links" class="flex short-padding">
                 <div>
                     <h3>about vibes</h3>
-                    <div class="separator"></div>
+                    <div class="separator pink-bgc"></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <strong>Repudiandae quasi quo sit a. Cum quis a dolore accusamus, nobis minima vero saepe alias harum</strong>. Delectus at et neque veritatis voluptates!</p>
                     <p>You can buy this responsive WordPress theme on <a href="#" class="pink">ThemeForest</a></p>
                 </div>
                 <!-- SHORT NEWSLETTER DIV -->
                 <div>
                     <h3>newsletter</h3>
-                    <div class="separator"></div>
+                    <div class="separator pink-bgc"></div>
                     <p><strong>VIBES</strong> contains fully working <strong>MailChimp</strong> subscribe form.</p>
                     <form action="newsletter-post.php" method="post">
                         <input type="email" name="email" placeholder="Your Email Address">
-                        <button type="submit" class="button">SUBSCRIBE</button>
+                        <button type="submit" class="button pink-bdr">SUBSCRIBE</button>
                     </form>
                 </div>
                 <!-- TWITTER FFEDS -->
                 <div>
                     <h3>twitter feed</h3>
-                    <div class="separator"></div>
+                    <div class="separator pink-bgc"></div>
                     <p>
                         <i class="fas fa-square"></i>
                         <i class="fas fa-square"></i>
@@ -217,9 +225,14 @@
             </section>
         </footer>
     </div>
+    <div id="page-up">
+        <a><i class="fas fa-angle-double-up"></i></a>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="js/theme.js"></script>
     <script src="js/accordion.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/lightbox.js"></script>
 </body>
 
 </html>
