--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +12,19 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Vibes</title>
 </head>
-
 <body>
     <h1 style="display:none;">Vibes</h1>
+    <!-- LE MENU BURGER MARCHE PAS ! -->
+    <aside id="slide-bar">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#footer-links">Pages</a></li>
+        </ul>
+    </aside>
     <div id="theme-switch"><i class="fas fa-tint pink pink-bdr"></i></div>
     <div id="wrapper">
         <!-- MAIN NAVIGATION -->
@@ -29,6 +38,9 @@
                 <a href="#contact">contact</a>
                 <a href="#footer-links">pages</a>
             </nav>
+            <div class="navbar">
+                <div class="menu icon-menu">&#9776;</div>
+            </div>
         </header>
         <!-- BANNER -->
         <section id="banner" class="huge-padding">
@@ -53,15 +65,15 @@
                 </article>
                 <article class="accordion">
                     <div class="accordion-item accordion-ui-title">
-                        <h3><i class="fas fa-plus accordion-title accordion-ui-trigger pink"></i>titre</h3>
+                        <h3 class="accordion-ui-trigger"><i class="fas fa-plus accordion-title pink"></i>titre</h3>
                         <p class="accordion-content accordion-ui-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, dolorem?</p>
                     </div>
                     <div class="accordion-item accordion-ui-title">
-                        <h3><i class="fas fa-plus accordion-title accordion-ui-trigger pink"></i>titre</h3>
+                        <h3 class="accordion-ui-trigger"><i class="fas fa-plus accordion-title pink"></i>titre</h3>
                         <p class="accordion-content accordion-ui-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, expedita!</p>
                     </div>
                     <div class="accordion-item accordion-ui-title">
-                        <h3><i class="fas fa-plus accordion-title accordion-ui-trigger pink"></i>titre</h3>
+                        <h3 class="accordion-ui-trigger"><i class="fas fa-plus accordion-title pink"></i>titre</h3>
                         <p class="accordion-content accordion-ui-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, facere.</p>
                     </div>
                 </article>
@@ -228,11 +240,8 @@
     <div id="page-up">
         <a><i class="fas fa-angle-double-up"></i></a>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <script src="js/theme.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin=" anonymous"></script>
+    <script src="js/app.js"></script>
     <script src="js/accordion.js"></script>
-    <script src="js/scroll.js"></script>
-    <script src="js/lightbox.js"></script>
 </body>
-
 </html>
